# ThesisDataRepo

./: .env  .gitignore  README.md  main.py  open_access.json  open_access_urls.txt  pyproject.toml  test_ssd.py  thesisdatarepo
.cursor/rules/: uv-python.mdc
Kasper/data/: abstract_grading.preset.json  abstract_grading_results.jsonl  abstract_grading_thinking.jsonl  grading_abstracts.json
Kasper/scripts/: campusai_abstract_grading.py  campusai_grading.py  extract_abstracts.py
TXT_handin_test/: 2497547039.txt
data/data_analysis_files/: README_df.md  df_filtered_excl_grades_15042026.parquet  df_filtered_final_86pct_grades_excl_2026_09042026.parquet
data/gcp_manual_copy/: thesis_meta_all_metrics_with_86pct_grades_09042026.parquet  thesis_meta_all_metrics_with_88pct_grades_16042026.parquet  thesis_meta_all_metrics_with_96pct_grades_20042026.parquet
maks/: AI_DRIFT_ANALYSIS_PLAN.md  ANALYSIS_PIPELINE.md  Analysis_main.ipynb  LOCAL_pdf2txt.py  Road_map.html  Supervisor_information.csv  analysis_config.example.toml  analysis_config.toml  fetcher.js  nlp_gcs.toml  run_gcs_nlp.py
maks/data/: manifest_nlp_gcs_full.csv
maks/findit_bulk_download/: build.sh  bulk_download.config.example.json  bulk_download.py  cookies-howto.txt  count_bins.py  count_downloadable_urls.py  har_to_cookies.py  open_access_probe.py  unpack_resolver_sse.py
maks/findit_urls/: dtu_checkpoint_p150.txt  dtu_checkpoint_p160.txt  dtu_checkpoint_p170.txt  dtu_checkpoint_p180.txt  dtu_p142_to_187.txt  dtu_theses_checkpoint_p10.txt  dtu_theses_checkpoint_p100-2.txt  dtu_theses_checkpoint_p100-3.txt  dtu_theses_checkpoint_p100.txt  dtu_theses_checkpoint_p110-2.txt  dtu_theses_checkpoint_p110.txt  dtu_theses_checkpoint_p120-2.txt  dtu_theses_checkpoint_p120.txt  dtu_theses_checkpoint_p130-2.txt  dtu_theses_checkpoint_p130.txt  dtu_theses_checkpoint_p190.txt  dtu_theses_checkpoint_p20.txt  dtu_theses_checkpoint_p200.txt  dtu_theses_checkpoint_p210.txt  dtu_theses_checkpoint_p220-2.txt  dtu_theses_checkpoint_p220.txt  dtu_theses_checkpoint_p230.txt  dtu_theses_checkpoint_p240.txt  dtu_theses_checkpoint_p250-2.txt  dtu_theses_checkpoint_p250.txt  dtu_theses_checkpoint_p260.txt  dtu_theses_checkpoint_p270.txt  dtu_theses_checkpoint_p280.txt  dtu_theses_checkpoint_p290.txt  dtu_theses_checkpoint_p30.txt  dtu_theses_checkpoint_p40.txt  dtu_theses_checkpoint_p50.txt  dtu_theses_checkpoint_p60.txt  dtu_theses_checkpoint_p70.txt  dtu_theses_checkpoint_p80.txt  dtu_theses_p100_to_141.txt  (+5 more)
oliver/: 2023_trends_analysis_notebook.ipynb  basic_stats_analysis.ipynb
scripts/: unhide_venv_pth.sh
tests/: test_pdf_context.py
thesisdatarepo/: __init__.py  pdf_context.py
(+10005 files in other folders)
