[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thesisdatarepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gsutil>=5.36",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pypdf>=6.9.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["thesisdatarepo"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
